<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="18pt"
        android:layout_margin="@dimen/medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/amount_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/amount_label"
        android:textStyle="bold"
        android:layout_margin="@dimen/medium"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/amount_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:minWidth="200dp"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textSize="14pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/percentage_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="@dimen/medium"
        app:layout_constraintTop_toBottomOf="@+id/amount_input"
        android:background="@drawable/accent_background">

        <TextView
            android:id="@+id/percentage_header"
            android:layout_margin="@dimen/medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tip_percentage_label"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toBottomOf="@id/percentage_header"
            android:id="@+id/tip_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/left_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/left_tip_button"/>

            <Button
                android:id="@+id/center_button"
                app:layout_constraintStart_toEndOf="@id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium"
                android:text="@string/center_tip_button"/>

            <Button
                android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/right_tip_button"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/final_amount_label"
        android:layout_marginTop="28dp"
        android:layout_marginStart="@dimen/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/percentage_container"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/final_amount_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/medium"
        app:layout_constraintTop_toTopOf="@+id/final_amount_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_marginTop="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:id="@+id/final_tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/final_amount_label"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/final_tip_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/medium"
        app:layout_constraintTop_toTopOf="@+id/final_tip_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_marginTop="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:id="@+id/final_hr"
        android:background="@color/grey_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/final_tip_label"
        android:layout_width = "match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_marginTop="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:id="@+id/final_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/final_hr"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/final_total_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/medium"
        app:layout_constraintTop_toTopOf="@+id/final_total_label"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>